# squarcle

./: CMakeLists.txt  README.MD  functions.c  functions.h  main.c  tests.c  tests.txt
